--- a/ansible/k3s/roles/chutes-gpu/tasks/setup_monitoring.yml
+++ b/ansible/k3s/roles/chutes-gpu/tasks/setup_monitoring.yml
@@ -5,18 +5,18 @@
     - name: Add Prometheus Community Helm repository
       kubernetes.core.helm_repository:
         name: prometheus-community
-        repo_url: https://prometheus-community.github.io/helm-charts
-
+        #repo_url: https://prometheus-community.github.io/helm-charts
+        repo_url: https://helm-charts.itboon.top/prometheus-community/
     - name: Add Metrics Server Helm repository
       kubernetes.core.helm_repository:
         name: metrics-server
-        repo_url: https://kubernetes-sigs.github.io/metrics-server/
-
+        #repo_url: https://kubernetes-sigs.github.io/metrics-server/
+        repo_url: https://helm-charts.itboon.top/metrics-server/
     - name: Add Kubernetes Dashboard Helm repository
       kubernetes.core.helm_repository:
         name: kubernetes-dashboard
-        repo_url: https://kubernetes.github.io/dashboard/
-
+        #repo_url: https://kubernetes.github.io/dashboard/
+        repo_url: https://helm-charts.itboon.top/dashboard/
     - name: Update Helm repositories
       shell: helm repo update
 
