--- a/ansible/k3s/roles/k3s/registries.yaml
+++ b/ansible/k3s/roles/k3s/registries.yaml
@@ -4,16 +4,42 @@
         dest: /etc/rancher/k3s/registries.yaml
         content: |
           mirrors:
-            "docker.io":
-              endpoint:
-                - "https://docker.m.daocloud.io" # 国内加速器 1
-                - "https://hub-mirror.c.163.com" # 国内加速器 2 (网易云)
-            "registry.k8s.io":
-              endpoint:
-                - "https://k8s-gcr.mirrors.ustc.edu.cn" # K8s 官方镜像加速
-            "quay.io":
-              endpoint:
-                - "https://quay.m.daocloud.io" # Quay.io 镜像加速
+            cr.l5d.io:
+              endpoint:
+                - "https://l5d.m.daocloud.io"
+            docker.elastic.co:
+              endpoint:
+                - "https://elastic.m.daocloud.io"
+            docker.io:
+              endpoint:
+                - "https://docker.m.daocloud.io"
+            gcr.io:
+              endpoint:
+                - "https://gcr.m.daocloud.io"
+            ghcr.io:
+              endpoint:
+                - "https://ghcr.m.daocloud.io"
+            k8s.gcr.io:
+              endpoint:
+                - "https://k8s-gcr.m.daocloud.io"
+            registry.k8s.io:
+              endpoint:
+                - "https://k8s.m.daocloud.io"
+            mcr.microsoft.com:
+              endpoint:
+                - "https://mcr.m.daocloud.io"
+            nvcr.io:
+              endpoint:
+                - "https://nvcr.m.daocloud.io"
+            quay.io:
+              endpoint:
+                - "https://quay.m.daocloud.io"
+            registry.jujucharms.com:
+              endpoint:
+                - "https://jujucharms.m.daocloud.io"
+            rocks.canonical.com:
+              endpoint:
+                - "https://rocks-canonical.m.daocloud.io"
         owner: root
         group: root
         mode: "0644"
