--- a/ansible/k3s/roles/chutes-gpu/tasks/setup_monitoring.yml
+++ b/ansible/k3s/roles/chutes-gpu/tasks/setup_monitoring.yml
@@ -5,8 +5,7 @@
     - name: Add Prometheus Community Helm repository
       kubernetes.core.helm_repository:
         name: prometheus-community
-        #repo_url: https://prometheus-community.github.io/helm-charts
-        repo_url: https://helm-charts.itboon.top/prometheus-community/
+        repo_url: https://prometheus-community.github.io/helm-charts
         
     - name: Add Metrics Server Helm repository
       kubernetes.core.helm_repository:
